--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -47,5 +47,9 @@ jobs:
         uses: github/super-linter@v4
         env:
           VALIDATE_ALL_CODEBASE: false
+          VALIDATE_PYTHON: true
+          VALIDATE_SHELL_SHFMT: true
+          ERROR_ON_MISSING_EXEC_BIT: true
+          CREATE_LOG_FILE: true
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
